--- a/town_hall/styles/c05x_sorkin.css
+++ b/town_hall/styles/c05x_sorkin.css
@@ -1,4 +1,36 @@
+html{
+	back-ground color: yellow;
+}
 body {
 	font-family: Arial, Helvetica, sans-serif;
-    font-size: 100%;
+        width: 650px;
+	margin: 0 auto;
+	border: 4px double blue;
+	padding: 20px;
+     }
+main{
+	padding: 20px;
+}
+footer{
+	border-top: 4px solid blue;
+	padding: 20px;
+}
+h1{
+	font-size: 150%;
+	color: blue;
+	margi-top: 20px;
+	margin-bottom: 10px;
+}
+h3{
+	font-size: 115%;
+	margin-top: 20px;
+	margin-bottom: 10px;
+}
+p,blockquote,ul,li {
+	margin-top: 20px;
+	margin-bottom: 10px;
+}
+cite {
+	color: blue;
+	font-style-: mormal;
 }
