--- a/town_hall/styles/c05x_sorkin.css
+++ b/town_hall/styles/c05x_sorkin.css
@@ -32,7 +32,7 @@ p,blockquote,ul,li {
 }
 cite {
 	color: blue;
-	font-style-: normal;
+	font-style: normal;
 }
 p.cite-paragraph {
 	text-align:right;
